--- a/code/bonus/link_pred.ipynb
+++ b/code/bonus/link_pred.ipynb
@@ -1,17 +1,686 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e4b16001",
+   "metadata": {},
+   "source": [
+    "# Link Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3dee4c1e",
+   "execution_count": 50,
+   "id": "acf3ab4d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import node2vec\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f230f39b",
+   "metadata": {},
+   "source": [
+    "## Creating the Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d7c2e0be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_net = nx.read_graphml(\"../networks/graphml/countries_network.graphml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ddada9df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2035"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(country_net.edges())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fbd7ee5",
+   "metadata": {},
+   "source": [
+    "Positive Samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "52f9a935",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hide_edges_safely(G, num_to_hide):\n",
+    "    hidden_edges = []\n",
+    "    edges = list(G.edges())\n",
+    "    random.shuffle(edges)\n",
+    "    \n",
+    "    G_train = G.copy()\n",
+    "    for u, v in edges:\n",
+    "        if len(hidden_edges) >= num_to_hide:\n",
+    "            break\n",
+    "        \n",
+    "        # Condition: Only remove if nodes still have other connections\n",
+    "        if G_train.degree(u) > 1 and G_train.degree(v) > 1:\n",
+    "            G_train.remove_edge(u, v)\n",
+    "            # Check if graph is still connected (for undirected)\n",
+    "            if nx.is_weakly_connected(G_train):\n",
+    "                hidden_edges.append((u, v))\n",
+    "            else:\n",
+    "                # Put it back if it disconnected the graph\n",
+    "                G_train.add_edge(u, v)\n",
+    "                \n",
+    "    return G_train, list(G_train.edges()), hidden_edges\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f6170a46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_train, train_pos, test_pos = hide_edges_safely(country_net, 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c19eb083",
+   "metadata": {},
+   "source": [
+    "Negative Samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "32e5c55c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_directed_negative_samples(G, num_samples):\n",
+    "    neg_samples = set()\n",
+    "    nodes = list(G.nodes())\n",
+    "    \n",
+    "    while len(neg_samples) < num_samples:\n",
+    "        u, v = random.sample(nodes, 2)\n",
+    "        # Check if the directed edge exists\n",
+    "        if not G.has_edge(u, v) and (u,v) not in neg_samples:\n",
+    "            neg_samples.add((u, v))\n",
+    "            \n",
+    "    return list(neg_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "01b46e98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neg_samples = get_directed_negative_samples(country_net, 2035)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "cbb822d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_neg, test_neg = train_test_split(neg_samples, test_size=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e7b4abe",
+   "metadata": {},
+   "source": [
+    "Final Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "b473bbf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = []\n",
+    "\n",
+    "for u, v in train_pos:\n",
+    "    train_data.append({'source': u, 'target': v, 'label': 1})\n",
+    "\n",
+    "for u, v in train_neg:\n",
+    "    train_data.append({'source': u, 'target': v, 'label': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "bf6cbec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.shuffle(train_data)\n",
+    "train_df = pd.DataFrame(train_data, columns=[\"source\", \"target\", \"label\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "56fe392f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = []\n",
+    "\n",
+    "for u, v in test_pos:\n",
+    "    test_data.append({'source': u, 'target': v, 'label': 1})\n",
+    "\n",
+    "for u, v in test_neg:\n",
+    "    test_data.append({'source': u, 'target': v, 'label': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "96ebb499",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.shuffle(test_data)\n",
+    "test_df = pd.DataFrame(test_data, columns=[\"source\", \"target\", \"label\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0a9e8f2",
+   "metadata": {},
+   "source": [
+    "## Node2Vec Link Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ed43aa0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9fbb6bb28ee74339aeffa3b25aa22ce3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Computing transition probabilities:   0%|          | 0/195 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating walks (CPU: 1): 100%|██████████| 500/500 [00:36<00:00, 13.81it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Genereate Walks\n",
+    "n2v = node2vec.Node2Vec(G_train, dimensions=64, walk_length=50, num_walks=500, p=0.5, q=0.1)\n",
+    "# Embed nodes\n",
+    "model = n2v.fit(window=10, min_count=1, batch_words=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "27f56b08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = model.wv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "1d370e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinkPredictionDataset(Dataset):\n",
+    "    def __init__(self, dataframe, embeddings):\n",
+    "        self.labels = dataframe['label'].values\n",
+    "        # Pre-fetch embeddings for efficiency\n",
+    "        sources = [embeddings[str(u)] for u in dataframe['source']]\n",
+    "        targets = [embeddings[str(v)] for v in dataframe['target']]\n",
+    "        \n",
+    "        self.X = np.hstack([sources, targets]) # Concatenate u and v\n",
+    "        self.X = torch.tensor(self.X, dtype=torch.float32)\n",
+    "        self.y = torch.tensor(self.labels, dtype=torch.float32).view(-1, 1)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.X[idx], self.y[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "0f90f6d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = LinkPredictionDataset(train_df, embeddings)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, pin_memory=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "42e94d2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class N2V_DirectedEdgePredictor(nn.Module):\n",
+    "    def __init__(self, input_dim):\n",
+    "        super().__init__()\n",
+    "        # input_dim is the size of one node embedding (e.g., 64 or 128)\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(input_dim, 64), # input_dim * 2 due to concatenation\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.Linear(64, 32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(32, 1), # Output layer size 1\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        return self.net(x) # Returns logits if using BCEWithLogitsLoss\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "2e91052b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Detect GPU (CUDA) or Apple Silicon (MPS), otherwise fallback to CPU\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "elif torch.backends.mps.is_available(): # For Mac M1/M2/M3 users in 2025\n",
+    "    device = torch.device(\"mps\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "abe83412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = next(iter(embeddings)).shape[0] * 2\n",
+    "model = N2V_DirectedEdgePredictor(input_dim).to(device)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "criterion = nn.BCELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a19d2b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5, Loss: 0.0630\n",
+      "Epoch 10, Loss: 0.0081\n",
+      "Epoch 15, Loss: 0.0044\n",
+      "Epoch 20, Loss: 0.0028\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training Loop\n",
+    "for epoch in range(1, 21):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    \n",
+    "    for batch_x, batch_y in train_loader:\n",
+    "        # MOVE DATA TO GPU HERE\n",
+    "        batch_x = batch_x.to(device)\n",
+    "        batch_y = batch_y.to(device)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(batch_x)\n",
+    "        loss = criterion(outputs, batch_y)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        total_loss += loss.item()\n",
+    "\n",
+    "    if epoch % 5 == 0:\n",
+    "        print(f\"Epoch {epoch}, Loss: {total_loss/len(train_loader):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbaff5a3",
+   "metadata": {},
+   "source": [
+    "#### Predictions on Training Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "bac7b9a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval() # Set model to evaluation mode\n",
+    "y_true = []\n",
+    "y_pred_probs = []\n",
+    "\n",
+    "with torch.no_grad(): # Disable gradient calculation during evaluation\n",
+    "    for batch_x, batch_y in train_loader:\n",
+    "        # Move data to the appropriate device (CPU for this part if you prefer)\n",
+    "        batch_x = batch_x.to(device) \n",
+    "        batch_y = batch_y.to('cpu')\n",
+    "\n",
+    "        outputs = model(batch_x).to('cpu')\n",
+    "        y_true.extend(batch_y.numpy().flatten())\n",
+    "        y_pred_probs.extend(outputs.numpy().flatten())\n",
+    "\n",
+    "# Convert probabilities to binary predictions (e.g., threshold at 0.5)\n",
+    "y_pred = [1 if p >= 0.5 else 0 for p in y_pred_probs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "79eff298",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[1985    0]\n",
+      " [   1 1984]]\n",
+      "\n",
+      "Accuracy: 0.9997\n",
+      "Precision: 1.0000\n",
+      "Recall: 0.9995\n",
+      "Macro F1 Score: 0.9997\n",
+      "Micro F1 Score: 0.9997\n",
+      "AUC Score: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "conf_matrix = confusion_matrix(y_true, y_pred)\n",
+    "print(f\"Confusion Matrix:\\n{conf_matrix}\\n\")\n",
+    "\n",
+    "# Standard Metrics\n",
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "precision = precision_score(y_true, y_pred)\n",
+    "recall = recall_score(y_true, y_pred)\n",
+    "f1_macro = f1_score(y_true, y_pred, average='macro')\n",
+    "f1_micro = f1_score(y_true, y_pred, average='micro')\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall: {recall:.4f}\")\n",
+    "print(f\"Macro F1 Score: {f1_macro:.4f}\")\n",
+    "print(f\"Micro F1 Score: {f1_micro:.4f}\")\n",
+    "\n",
+    "# AUC (Area Under the Curve)\n",
+    "# AUC requires the raw probabilities (y_pred_probs)\n",
+    "auc_score = roc_auc_score(y_true, y_pred_probs)\n",
+    "print(f\"AUC Score: {auc_score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9f7d370",
+   "metadata": {},
+   "source": [
+    "#### Predictions on Test Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "6a4326fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset = LinkPredictionDataset(test_df, embeddings)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=16, shuffle=True, pin_memory=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "30795a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval() # Set model to evaluation mode\n",
+    "y_true = []\n",
+    "y_pred_probs = []\n",
+    "\n",
+    "with torch.no_grad(): # Disable gradient calculation during evaluation\n",
+    "    for batch_x, batch_y in test_loader:\n",
+    "        # Move data to the appropriate device (CPU for this part if you prefer)\n",
+    "        batch_x = batch_x.to(device) \n",
+    "        batch_y = batch_y.to('cpu')\n",
+    "\n",
+    "        outputs = model(batch_x).to('cpu')\n",
+    "        y_true.extend(batch_y.numpy().flatten())\n",
+    "        y_pred_probs.extend(outputs.numpy().flatten())\n",
+    "\n",
+    "# Convert probabilities to binary predictions (e.g., threshold at 0.5)\n",
+    "y_pred = [1 if p >= 0.5 else 0 for p in y_pred_probs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "9ace922d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[50  0]\n",
+      " [ 0 50]]\n",
+      "\n",
+      "Accuracy: 1.0000\n",
+      "Precision: 1.0000\n",
+      "Recall: 1.0000\n",
+      "Macro F1 Score: 1.0000\n",
+      "Micro F1 Score: 1.0000\n",
+      "AUC Score: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "conf_matrix = confusion_matrix(y_true, y_pred)\n",
+    "print(f\"Confusion Matrix:\\n{conf_matrix}\\n\")\n",
+    "\n",
+    "# Standard Metrics\n",
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "precision = precision_score(y_true, y_pred)\n",
+    "recall = recall_score(y_true, y_pred)\n",
+    "f1_macro = f1_score(y_true, y_pred, average='macro')\n",
+    "f1_micro = f1_score(y_true, y_pred, average='micro')\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall: {recall:.4f}\")\n",
+    "print(f\"Macro F1 Score: {f1_macro:.4f}\")\n",
+    "print(f\"Micro F1 Score: {f1_micro:.4f}\")\n",
+    "\n",
+    "# AUC (Area Under the Curve)\n",
+    "# AUC requires the raw probabilities (y_pred_probs)\n",
+    "auc_score = roc_auc_score(y_true, y_pred_probs)\n",
+    "print(f\"AUC Score: {auc_score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "f24627ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_link_pred(source, target):\n",
+    "    emb_source = embeddings[source]\n",
+    "    emb_target = embeddings[target]\n",
+    "    source_target = np.hstack([emb_source, emb_target])\n",
+    "    target_source = np.hstack([emb_target, emb_source])\n",
+    "    source_target_input = torch.tensor(source_target, dtype=torch.float32).unsqueeze(0) # Add batch dimension\n",
+    "    target_source_input = torch.tensor(target_source, dtype=torch.float32).unsqueeze(0) # Add batch dimension\n",
+    "    source_target_input = source_target_input.to(device)\n",
+    "    target_source_input = target_source_input.to(device)\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        return model(source_target_input).item(), model(target_source_input).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "fed11a4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of a directed edge from China to Austria: 0.9998\n",
+      "Probability of a directed edge from Austria to China: 0.0000\n",
+      "Prediction: Edge China -> Austria EXISTS\n",
+      "Prediction: Edge Austria -> China DOESN'T EXIST\n"
+     ]
+    }
+   ],
+   "source": [
+    "source = \"China\"\n",
+    "target = \"Austria\"\n",
+    "\n",
+    "source_target_prob, target_source_prob = get_link_pred(source, target)\n",
+    "\n",
+    "print(f\"Probability of a directed edge from {source} to {target}: {source_target_prob:.4f}\")\n",
+    "print(f\"Probability of a directed edge from {target} to {source}: {target_source_prob:.4f}\")\n",
+    "\n",
+    "# Threshold check (standard is 0.5)\n",
+    "if source_target_prob >= 0.5:\n",
+    "    print(f\"Prediction: Edge {source} -> {target} EXISTS\")\n",
+    "else:\n",
+    "    print(f\"Prediction: Edge {source} -> {target} DOESN'T EXIST\")\n",
+    "\n",
+    "if target_source_prob >= 0.5:\n",
+    "    print(f\"Prediction: Edge {target} -> {source} EXISTS\")\n",
+    "else:\n",
+    "    print(f\"Prediction: Edge {target} -> {source} DOESN'T EXIST\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a441a4a8",
+   "metadata": {},
+   "source": [
+    "## GNN Link Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5fde766",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
