--- a/code/analysis/analyse_edges.ipynb
+++ b/code/analysis/analyse_edges.ipynb
@@ -32,28 +32,121 @@
    "id": "4d215a03",
    "metadata": {},
    "source": [
-    "### Shortening the game"
+    "### Betweennes Centrality"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "818cdc1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_edge_betweenness = nx.edge_betweenness_centrality(country_net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2bead5ff",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('Burkina Faso', 'Oman'), ('Paraguay', 'Yemen'), ('Vatican City', 'Yemen')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Nauru', 'United Kingdom') 0.08051174865607857\n",
+      "('New Zealand', 'Dominican Republic') 0.05613551015612871\n",
+      "('Afghanistan', 'Netherlands') 0.04540561672004976\n",
+      "('Azerbaijan', 'Netherlands') 0.04540561672004976\n",
+      "('New Zealand', 'Djibouti') 0.04235466518971679\n",
+      "('Afghanistan', 'New Zealand') 0.042139501392078726\n",
+      "('Azerbaijan', 'New Zealand') 0.042139501392078726\n",
+      "('Nepal', 'Luxembourg') 0.041564455018063266\n",
+      "('Afghanistan', 'Nauru') 0.03195856072144729\n",
+      "('Azerbaijan', 'Nauru') 0.03195856072144729\n"
+     ]
     }
    ],
    "source": [
-    "list(nx.bridges(country_net.to_undirected()))"
+    "for edge, betweennes in sorted(country_edge_betweenness.items(), key=lambda item: item[1], reverse=True)[:10]:\n",
+    "    print(edge, betweennes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e33f8747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city_edge_betweenness = nx.edge_betweenness_centrality(city_net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "166dec80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Novosibirsk', 'Karaj') 0.010987372299689048\n",
+      "('Nashik', 'Karaj') 0.010987372299689048\n",
+      "('Gaziantep', 'Prayagraj') 0.010348242414577002\n",
+      "('Anyang', 'Gaziantep') 0.00894523535995872\n",
+      "('İzmir', 'Rasapūdipalem') 0.008092126826323575\n",
+      "('Ulsan', 'Novosibirsk') 0.006436650930494415\n",
+      "('Ulsan', 'Nashik') 0.006436650930494415\n",
+      "('Omsk', 'Karaj') 0.006378629348250843\n",
+      "('Nouakchott', 'The Bronx') 0.006254041035242153\n",
+      "('Ulsan', 'Nouakchott') 0.005895836584878336\n"
+     ]
+    }
+   ],
+   "source": [
+    "for edge, betweennes in sorted(city_edge_betweenness.items(), key=lambda item: item[1], reverse=True)[:10]:\n",
+    "    print(edge, betweennes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4c120a1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_edge_betweenness = nx.edge_betweenness_centrality(combined_net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3d555a62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Anyang', 'Gaziantep') 0.012505149489626072\n",
+      "('Novosibirsk', 'Karaj') 0.008723277791873162\n",
+      "('Nashik', 'Karaj') 0.008723277791873162\n",
+      "('Ahmedabad', 'Dominican Republic') 0.008442502098351777\n",
+      "('Auckland', 'Dominican Republic') 0.008442502098351777\n",
+      "('Aurangabad', 'Dominican Republic') 0.008442502098351777\n",
+      "('Ghāziābād', 'Dominican Republic') 0.007871585650384478\n",
+      "('New Zealand', 'Dominican Republic') 0.007146519118611631\n",
+      "('Nizhniy Novgorod', 'Dominican Republic') 0.007146519118611631\n",
+      "('Gaziantep', 'Prayagraj') 0.00652831106850795\n"
+     ]
+    }
+   ],
+   "source": [
+    "for edge, betweennes in sorted(combined_edge_betweenness.items(), key=lambda item: item[1], reverse=True)[:10]:\n",
+    "    print(edge, betweennes)"
    ]
   },
   {
